refact(data): change from student to article table
