# models/student.go
@@ -1,8 +1,0 @@
-package models
-
-type Student struct {
-	ID         int64
-	NIM        string
-	Name       string
-	BirthPlace string
-}
